--- a/package.json
+++ b/package.json
@@ -3,16 +3,20 @@
   "private": true,
   "version": "1.0.0",
   "description": "Manage my minecraft containers",
-  "main": "proxy.js",
   "scripts": {
-    "start": "node proxy.js",
-    "dev": "cd client && npm start"
+    "start": "run-p start:**",
+    "start:app": "cd client && npm start",
+    "start:server": "cd api && npm start",
+    "build": "run-p build:**",
+    "build:app": "cd client && npm run build",
+    "build:server": "cd api && npm run build",
+    "test": "run-p test:**",
+    "test:app": "cd client && npm run test",
+    "test:server": "cd api && npm run test"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "express": "^4.18.2"
+  "devDependencies": {
+    "npm-run-all": "^4.1.5"
   }
 }
