--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 COMPOSE_CONVERT_WINDOWS_PATHS=1
 API_PORT=5000
 CONTAINER_NAMES=minecraft_bedrock
+SOCKET_PATH=//./pipe/docker_engine # for windows, or blank for other
