--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
+      - ${SOCKET_PATH:-/var/run/docker.sock}:/var/run/docker.sock
     environment:
       - API_PORT=${API_PORT}
     ports:
