--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -18,9 +18,18 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": ".",
+    "paths": {
+      "@config": ["src/config/index"],
+      "@components/*": ["src/components/*"],
+      "@pages/*": ["src/pages/*"],
+      "@services/*": ["src/services/*"],
+      "@shared/*": ["../shared/*"]
+    }
   },
   "include": [
-    "src"
+    "src",
+    "../shared/**/*.ts"
   ]
 }
