--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,7 @@
     "@types/react-dom": "^18.0.11"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "WATCHPACK_POLLING=true react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
