--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 COMPOSE_CONVERT_WINDOWS_PATHS=1
 API_PORT=5000
 CONTAINER_NAMES=minecraft_bedrock
+CLIENT_DIR=../../client/build # path to the client build directory relative to api/src/index.ts
 SOCKET_PATH=//./pipe/docker_engine # for windows, or blank for other
