--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,6 @@ services:
       - ${SOCKET_PATH:-/var/run/docker.sock}:/var/run/docker.sock
     environment:
       - API_PORT=${API_PORT}
+      - CONTAINER_NAMES=minecraft-bedrock,stopped-server,server-not-found
     ports:
       - ${API_PORT}:${API_PORT}
