fixing typo in actions file

--- a/.github/workflows/deploy-image.yml
+++ b/.github/workflows/deploy-image.yml
@@ -10,7 +10,7 @@ jobs:
   build-and-push-image:
     name: Build and push image
     runs-on: ubuntu-latest
-    permisions:
+    permissions:
       contents: read
       packages: write
     steps:
