Moving to properly support container groups and configs
Moving the container config from env var to json file
Updating client to support the server groups in the UI
Updating api to support groups for server status and server restart

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 COMPOSE_CONVERT_WINDOWS_PATHS=1
 API_PORT=5000
-CONTAINER_NAMES=minecraft_bedrock
-CLIENT_DIR=../../client/build # path to the client build directory relative to api/src/index.ts
+CLIENT_DIR=./client/build # path to the client build directory absolute path or relative to project root
+CONFIG_DIR=./config # path to the config directory absolute path or relative to project root
 SOCKET_PATH=//./pipe/docker_engine # for windows, or blank for other
